--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,13 +3,14 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "ALL_10-800_LOOSE" #"TDS_ELAISN1"#"ALL_10-800_LOOSE" #  #""TDS_ELAISN1" # "ALL_10-800"
+    name            : "TDS_ELAISN1"# "ALL_10-800_LOOSE" #""ALL_10-800_LOOSE" #
+    #""TDS_ELAISN1" # "ALL_10-800"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
     nr_cpus         : 8                                  # Number of CPUs to use. If "null" all available are used.
     save_ref_srcs   : true                               # Store reference sources into region file
-    run_fields      : true                             # If fields have already been clustered and saved and should be reused set to "false". Otherwise the default is true
+    run_fields      : false                             # If fields have already been clustered and saved and should be reused set to "false". Otherwise the default is true
     
 resources:                      
     load_method      : "VASCA"                   # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
@@ -45,27 +46,60 @@ assoc_src_coadd:
     dist_max      : 1        # Associate nearest source below this distance in arc_sec  OR
     dist_s2n_max  : 3        # Associate nearest source with this distance in units of "squared sumed position error"   
 
-        
-selection:
-    src_variability:
+#Keep only sources which after second clustering full fill the following
+selection_src_quality:
+    selection_src_quality_nuv:
+        table: "tt_sources"
+        presel_type: "or"
+        sel_type: "and"
+        obs_filter: "NUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
+        range:
+            nr_det: [ 2,.inf ]
+            pos_cpval: [ 0.0001,.inf ]
+            pos_xv: [ -.inf,2 ]
+    selection_src_quality_fuv:
+        table: "tt_sources"
+        presel_type: "or"
+        sel_type: "and"
+        obs_filter: "FUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
+        range:
+            nr_det: [ 2,.inf ]
+            pos_cpval: [ 0.0001,.inf ]
+            pos_xv: [ -.inf,2 ]
+
+selection_src:
+    src_variability_nuv:
         table       : "tt_sources"
-        presel_type : "and"
+        presel_type : "or"
         sel_type    : "and"
         obs_filter  : "NUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
         range:
-            nr_det         : [2,.inf]
-            pos_cpval      : [0.0001,.inf]
-            pos_xv         : [-.inf,2]             
             flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
             flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%  
             flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
-    src_coadd_diff:
+    src_coadd_diff_nuv:
         table       : "tt_sources"
         presel_type : "or"
         sel_type    : "and"
         obs_filter  : "NUV" 
         range:
-            nr_det          : [2,.inf]   
+            coadd_ffactor   : [2.0,.inf]
+            coadd_fdiff_s2n : [7,.inf]
+    src_variability_fuv:
+        table       : "tt_sources"
+        presel_type : "or"
+        sel_type    : "and"
+        obs_filter  : "FUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
+        range:
+            flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
+            flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%
+            flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
+    src_coadd_diff_fuv:
+        table       : "tt_sources"
+        presel_type : "or"
+        sel_type    : "and"
+        obs_filter  : "FUV"
+        range:
             coadd_ffactor   : [2.0,.inf]
             coadd_fdiff_s2n : [7,.inf]
                     
@@ -127,8 +161,8 @@ observations:
                   # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
 
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
+      #obs_field_ids : !include  ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
@@ -187,8 +221,8 @@ observations:
                   # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
 
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
