--- a/vasca/vasca_cfg_GCK.yaml
+++ b/vasca/vasca_cfg_GCK.yaml
@@ -1,14 +1,15 @@
 ---
 authors : "UC science"
-comment : "Example configuration file"
+comment : "GALEX CAUSE Kepler survey fields configuration file"
 
 general:
     name            : "GCK"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
-    nr_cpus         : 3                                  # Number of CPUs to use. If "null" all available are used.
-    save_ref_srcs   : true                               # Store referenze sources into region file
+    nr_cpus         : 8                                  # Number of CPUs to use. If "null" all available are used.
+    save_ref_srcs   : true                               # Store reference sources into region file
+    run_fields      : true                               # If fields have already been clustered and saved and should be reused set to "false". Otherwise the default is true
     
 resources:                      
     load_method      : "MAST_LOCAL"                    # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
@@ -31,7 +32,7 @@ cluster_src:
 
 cluster_coadd_dets:
     meanshift:
-        bandwidth     : 3               # In arcsec, to estimate it automatically specify "null"
+        bandwidth     : 4               # In arcsec, to estimate it automatically specify "null"
         seeds         : null
         bin_seeding   : false
         min_bin_freq  : 1
@@ -45,34 +46,35 @@ assoc_src_coadd:
     dist_s2n_max  : 3        # Associate nearest source with this distance in units of "squared sumed position error"   
 
         
-selection:
-    src_variability:
-        table       : "tt_sources"
-        presel_type : "and"
-        sel_type    : "and"
-        obs_filter  : "NUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
+#Keep only sources which after second clustering full fill the following
+selection_src_quality:
+    selection_src_quality_nuv:
+        table: "tt_sources"
+        presel_type: "or"
+        sel_type: "and"
+        obs_filter: "NUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
         range:
-            nr_det         : [2,.inf]
-            pos_cpval      : [0.0000000001,.inf]            
-            flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
-            flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%  
-            flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
-    src_coadd_diff:
+            nr_det: [ 2,.inf ]
+            pos_cpval: [ 0.0001,.inf ]
+            pos_xv: [ -.inf,2 ]
+
+selection_src:
+    src_variability_nuv:
         table       : "tt_sources"
         presel_type : "or"
         sel_type    : "and"
-        obs_filter  : "NUV" 
+        obs_filter  : "NUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
         range:
-            nr_det          : [1,.inf]   
-            assoc_ffactor   : [2.0,.inf]
-            assoc_fdiff_s2n : [7,.inf]
-                    
+            flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
+            flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%  
+            flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
+
 observations:
     - observatory   : "GALEX_DS"
       obs_filter    : "NUV"
       cluster_det:
           meanshift:
-              bandwidth     : 5               # In arcsec, to estimate it automatically specify "null"
+              bandwidth     : 4               # In arcsec, to estimate it automatically specify "null"
               seeds         : null
               bin_seeding   : false
               min_bin_freq  : 1
@@ -88,16 +90,17 @@ observations:
               sel_type    : "and"
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
-                s2n            : [5, .inf]
+                s2n            : [3, .inf]
                 r_fov          : [0.0, 1.5]
-                ellip_world    : [0.0, 0.35]
-                size_world     : [0.0, 7.0]
-                class_star     : [0.01, 1.0]        # Extension classifier (extended=0, point like=1)
+                ellip_world    : [0.0, 0.55]
+                size_world     : [0.0, 6.0]
+                class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                 chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
+                flux_app_ratio : [0.3,1.05]       # 
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
-                  artifacts : [2,4,8,64,128,256,512]
+                  artifacts : [2,4,8,128,256]
               #If below/above this value will set it to min/max
               set_range:
                   pos_err : [0.5,5] # In arcsec
@@ -108,14 +111,8 @@ observations:
               sel_type    : "is_in"
               var         : "fd_src_id"
           coadd_det_quality:
-              table    : "tt_coadd_detections"
-              presel_type : "and"
-              sel_type : "and"  # These are all AND selections
-              range:
-                  s2n            : [4,.inf]
-                  r_fov          : [0.0,0.55]
               
-      obs_field_ids : !include field_ids_GCK.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_GCK.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
