--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,8 +3,7 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "TDS_ELAISN1"# #"ALL_10-800_LOOSE" # ""ALL_10-800_LOOSE" #
-    #""TDS_ELAISN1" # "ALL_10-800"
+    name            : ALL_10-800" #TDS_ELAISN1"# #"ALL_10-800_LOOSE"  #""TDS_ELAISN1" # "ALL_10-800"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
@@ -125,7 +124,7 @@ observations:
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
                   s2n            : [3, .inf]
-                  r_fov          : [0.0, 0.55]
+                  r_fov          : [0.0, 0.5]
                   ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
@@ -150,7 +149,7 @@ observations:
               sel_type : "and"  # These are all AND selections
               range:
                   s2n            : [5, .inf]
-                  r_fov          : [0.0, 0.55]
+                  r_fov          : [0.0, 0.5]
                   ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
@@ -161,8 +160,8 @@ observations:
                   # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
 
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
-      #obs_field_ids : !include  ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
+      obs_field_ids : !include  ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
@@ -185,7 +184,7 @@ observations:
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
                   s2n            : [3, .inf]
-                  r_fov          : [0.0, 0.55]
+                  r_fov          : [0.0, 0.5]
                   ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
@@ -210,7 +209,7 @@ observations:
               sel_type : "and"  # These are all AND selections
               range:
                   s2n            : [5, .inf]
-                  r_fov          : [0.0, 0.55]
+                  r_fov          : [0.0, 0.5]
                   ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
@@ -221,8 +220,8 @@ observations:
                   # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
 
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
