Continued gphoton difference investigation
Former-commit-id: b94fa5bfe3eba5bea4e14b09fddecbae7e7811d8

--- a/vasca/resource_metadata/resource_catalog.yml
+++ b/vasca/resource_metadata/resource_catalog.yml
@@ -16,10 +16,10 @@
 sas_cloud:
     0:
         name: gal_visits_list
-        description: 'Complete list of all GALEX visits.'
+        description: 'Complete list of all GALEX visits with NUV exposure.'
         type: file
         project: vascarcat
-        path: /GALEX_visits_list/GALEX_visits_list_qualsel.fits
+        path: /GALEX_visits_list/GALEX_visits_list_qualvars.fits
     1:
         name: gal_fields
         description: 'Collection of GALEX dataproducts for fileds of interest.'
@@ -32,6 +32,12 @@ sas_cloud:
         type: directory
         project: vascarcat
         path: /GALEX_gPhoton
+    3:
+        name: gal_visits_list_qualsel
+        description: 'Complete list of all GALEX visits.'
+        type: file
+        project: vascarcat
+        path: /GALEX_visits_list/GALEX_visits_list_qualsel.fits
     
 lustre:
     0:
