🛠MAINTENANCE: Modified VASCA CL tool and config
Former-commit-id: 44adb5838ac2796e6f559e222c0e74a28bed6cb0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,9 @@ documentation = "https://tbd.desy.de"
 repository = "https://gitlab.desy.de/ultrasat-camera/uc_vasca"
 changelog = "https://tbd.desy.de"
 
+[project.scripts]
+vasca_pipe = "vasca.vasca_pipe:run_from_file"
+
 [tool.setuptools]
 packages = ["vasca"]
 
