--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,7 +3,7 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "ALL_10-800" #"TDS_ELAISN1"# #"ALL_10-800_LOOSE"  #""TDS_ELAISN1" # "ALL_10-800"
+    name            : "TDS_ELAISN1"#"ALL_10-800" # #"ALL_10-800_LOOSE"  #""TDS_ELAISN1" # "ALL_10-800"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
@@ -43,28 +43,7 @@ cluster_coadd_dets:
 
 assoc_src_coadd:
     dist_max      : 1        # Associate nearest source below this distance in arc_sec  OR
-    dist_s2n_max  : 3        # Associate nearest source with this distance in units of "squared sumed position error"   
-
-#Keep only sources which after second clustering full fill the following
-selection_src_quality:
-    selection_src_quality_nuv:
-        table: "tt_sources"
-        presel_type: "or"
-        sel_type: "and"
-        obs_filter: "NUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
-        range:
-            nr_det: [ 2,.inf ]
-            pos_cpval: [ 0.0001,.inf ]
-            pos_xv: [ -.inf,2 ]
-    selection_src_quality_fuv:
-        table: "tt_sources"
-        presel_type: "or"
-        sel_type: "and"
-        obs_filter: "FUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
-        range:
-            nr_det: [ 2,.inf ]
-            pos_cpval: [ 0.0001,.inf ]
-            pos_xv: [ -.inf,2 ]
+    dist_s2n_max  : 3        # Associate nearest source with this distance in units of "squared sumed position error"
 
 selection_src:
     src_variability_nuv:
@@ -73,6 +52,9 @@ selection_src:
         sel_type    : "and"
         obs_filter  : "NUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
         range:
+            nr_det: [ 3,.inf ]
+            pos_cpval: [ 0.0001,.inf ]
+            pos_xv: [ -.inf,2 ]
             flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
             flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%  
             flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
@@ -82,6 +64,9 @@ selection_src:
         sel_type    : "and"
         obs_filter  : "NUV" 
         range:
+            nr_det: [ 2,.inf ]
+            pos_cpval: [ 0.0001,.inf ]
+            pos_xv: [ -.inf,2 ]
             coadd_ffactor   : [2.0,.inf]
             coadd_fdiff_s2n : [7,.inf]
     src_variability_fuv:
@@ -90,6 +75,9 @@ selection_src:
         sel_type    : "and"
         obs_filter  : "FUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
         range:
+            nr_det: [ 3,.inf ]
+            pos_cpval: [ 0.0001,.inf ]
+            pos_xv: [ -.inf,2 ]
             flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
             flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%
             flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
@@ -99,6 +87,9 @@ selection_src:
         sel_type    : "and"
         obs_filter  : "FUV"
         range:
+            nr_det: [ 2,.inf ]
+            pos_cpval: [ 0.0001,.inf ]
+            pos_xv: [ -.inf,2 ]
             coadd_ffactor   : [2.0,.inf]
             coadd_fdiff_s2n : [7,.inf]
                     
@@ -160,8 +151,8 @@ observations:
                   # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
 
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
-      obs_field_ids : !include  ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
+      #obs_field_ids : !include  ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
@@ -220,8 +211,8 @@ observations:
                   # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
 
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
