--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,8 @@ dependencies = [
   "ipywidgets ~= 8.0.6",
   "ipympl ~= 0.9.3",
   "jupyterlab ~= 4.0.2",
-  "sphinx~= 7.2.6",
-  "sphinx-rtd-theme = 2.0.0",
+  "sphinx ~= 7.2.6",
+  "sphinx-rtd-theme ~= 2.0.0",
 ]
 
 [project.urls]
