--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -3,7 +3,7 @@
 name: 🚀 pypi
 
 on: 
-  workflow_dispatch:
+  push
 
 jobs:
   build:
@@ -37,7 +37,7 @@ jobs:
   publish-to-pypi:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') && github.repository == 'rbuehler/vasca'
     needs:
       - build
     runs-on: ubuntu-latest
