--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: "3.x"
     
     - name: Install pypa/build
       run: >-
@@ -78,28 +78,33 @@ jobs:
         name: python-package-distributions
         path: dist/
     
-    # - name: Set up Python virtual environment
-    #   run: |
-    #     python3 -m venv venv
-    #     source venv/bin/activate
-    # 
-    # - name: Install Sigstore dependencies in the virtual environment
-    #   run: |
-    #     pip install --upgrade pip
-    #     pip install sigstore
-    # 
-    # - name: Sign the dists with Sigstore
-    #   run: |
-    #     source venv/bin/activate
-    #     sigstore sign ./dist/*.tar.gz ./dist/*.whl
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.x"
+    
+    - name: Set up Python virtual environment
+      run: |
+        python3 -m venv venv
+        source venv/bin/activate
+    
+    - name: Install Sigstore dependencies in the virtual environment
+      run: |
+        pip install --upgrade pip
+        pip install sigstore
     
     - name: Sign the dists with Sigstore
-      uses: sigstore/gh-action-sigstore-python@v2.1.1
-      with:
-        inputs: >-
-          ./dist/*.tar.gz
-          ./dist/*.whl
-        internal-be-careful-debug: true
+      run: |
+        source venv/bin/activate
+        sigstore sign ./dist/*.tar.gz ./dist/*.whl
+    
+    # - name: Sign the dists with Sigstore
+    #   uses: sigstore/gh-action-sigstore-python@v2.1.1
+    #   with:
+    #     inputs: >-
+    #       ./dist/*.tar.gz
+    #       ./dist/*.whl
+    #     internal-be-careful-debug: true
     
     - name: Create GitHub Release
       env:
