--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -128,7 +128,7 @@ jobs:
   
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
-    if: startsWith(github.ref, 'refs/tags/') && github.repository == 'rbuehler/vasca'
+    if: github.repository == 'rbuehler/vasca'
     needs:
     - build
     runs-on: ubuntu-latest
@@ -146,6 +146,10 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
+    
+    - name: Modify version for TestPyPI
+      run: |
+        sed -i 's/version = "1.0.0"/version = "1.0.0.dev${{ github.run_number }}"/' pyproject.toml
     
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
