--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -27,7 +27,7 @@ jobs:
         --user
     
     - name: Build a binary wheel and a source tarball
-      run: python3 -m build
+      run: python3 -m build --outdir dist/pypi
     
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
@@ -153,7 +153,7 @@ jobs:
         --user
     
     - name: Build a binary wheel and a source tarball
-      run: python3 -m build
+      run: python3 -m build --outdir dist/testpypi
     
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
